cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_190.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/cast/c_enc.c:104: error: DEAD_STORE
  The value written to &in (type unsigned char const *) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/cast/c_enc.c:104:13: Write of unused value
102.           }
103.           if (l != -8) {
104.               n2ln(in, tin0, tin1, l + 8);
                   ^
105.               tin0 ^= tout0;
106.               tin1 ^= tout1;
